fixing the spacing for the text separator with new font // #208

--- a/web/layout/primary.less
+++ b/web/layout/primary.less
@@ -21,7 +21,7 @@ span.ja
 }
 span.divider
 {
-    padding: 0 5px 0 2px;
+    padding: 0 4px 0 4px;
 }
 a:link, a:visited, a:hover
 {
